# drf-custom-user-model

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini
core/: settings.py  urls.py
src/apps/status/: apis.py  apps.py  models.py  serializers.py  services.py  urls.py
src/apps/user/: admin.py  apis.py  authentication.py  models.py  serializers.py  services.py  urls.py
src/apps/user/migrations/: 0001_initial.py
tests/: conftest.py
tests/api/: test_status.py  test_user.py
